--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<article class="container" id="about">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="images/ayushman.jpg" alt="" style="border-radius: 50%;" /></span>
+							<span class="image fit"><img src="images/ayushman7.jpg" alt="" style="border-radius: 50%;" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
